# session-memory

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SCHEMA.md
prompts/: l1_extract.md  l1_review.md
src/session_memory/: cli.py
src/session_memory/adapters/: claude_cli.py
src/session_memory/digest/: batch.py  clean.py  generate.py
src/session_memory/extract/: batch.py  claude.py  codex.py  common.py
src/session_memory/utils/: json_extract.py  yaml_io.py
