[project]
name = "session-memory"
version = "0.1.0"
description = "从 Claude Code / Codex CLI 的 session 历史中抽取产品视角的业务事件摘要"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
session-memory = "session_memory.cli:app"
sm = "session_memory.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/session_memory"]
